ヘッダーを追従させる

--- a/style.css
+++ b/style.css
@@ -40,6 +40,11 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  width: 100%;
 }
 
 .header-logo-wrapper {
@@ -69,6 +74,7 @@ img {
   align-items: center;
   padding: 94px 40px;
   position: relative;
+  margin-top: 80px;
 }
 
 .hero::after {
@@ -114,6 +120,7 @@ img {
 
 @media (max-width: 750px) {
   .hero {
+    margin-top: 60px;
     padding: 40px 20px;
   }
 
